# cpp-Neural-Network

./: CMakeLists.txt  README.md
include/: Settings.hpp  Setup.hpp  UI_button.hpp  app_input.hpp  application.hpp  camera.hpp  menu.hpp  mesh.hpp  obj_loader.hpp  perlin_noise_2d.hpp  renderer.hpp  resource.hpp  text_renderer.hpp  texture.hpp  textures.hpp  tile.hpp  utils.hpp
networks/: XNOR  XOR  XORbig  XORbigBIG
resources/: 1.frag  1.vert  globeTest.vert  instanced.frag  instanced.vert  object.frag  object.vert  object1.frag  rect.frag  rect.vert  text.vert
resources/objects/forest/: hexagon_forest.mtl
resources/objects/grass/: hexagon_grass.mtl
resources/objects/road/: hexagon_road.mtl
src/: fileHandler.cpp  fileHandler.h  layer.cpp  layer.h  main.cpp  network.cpp  network.h  random.hpp
